opam-version: "2.0"
name: "rest-client"
synopsis: "Simple REST client library"
version: "0.1"
maintainer: "Ramil Farkhshatov <ramil.fh@ya.ru>"
authors: "Ramil Farkhshatov <ramil.fh@ya.ru>"
license: "LGPLv3 with OpenSSL linking exception"
build: ["dune" "build" "-p" name "-j" jobs]
depends: ["ocurl"
          "yojson"
          "lwt_ppx"]
